--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,13 @@
     "dev": "react-scripts start"
   },
   "dependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.0",
     "recharts": "^2.8.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "typescript": "^4.9.0",
     "web-vitals": "^2.1.4"
   },
@@ -32,5 +32,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "jest-environment-jsdom": "^30.0.2",
+    "ts-jest": "^29.4.0"
   }
 }
