--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,10 @@ Flask
 Flask-Cors
 yfinance
 requests
-google-generativeai:contentReference[oaicite:0]{index=0}
+google-generativeai
 numpy
 pandas
 scikit-learn
 tensorflow
-ta:contentReference[oaicite:1]{index=1}
+ta
+gunicorn
